# rs-tree-sitter-languages

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  publish.sh
.github/workflows/: ci.yaml
examples/: highlighter.rs
src/: lib.rs
