[package]
name = "pepegsitter"
description = "Collection of Tree-Sitter parsers"
repository = "https://github.com/Dav1dde/PepegSitter"
version = "0.2.1"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"
license = "MIT"
build = "build.rs"

include = [
    "**/*.rs",
    "Cargo.toml",
    "sitters/tree-sitter-*/pepegsitter-version",
    "sitters/tree-sitter-*/*.js",
    "sitters/tree-sitter-*/queries/*.scm",
    "sitters/tree-sitter-*/**/*.c",
    "sitters/tree-sitter-*/**/*.h",
    "sitters/tree-sitter-*/**/src/*.cc",
    "sitters/tree-sitter-*/**/src/*.json",
]

[features]
default = [
    "bash",
    "c",
    "cpp",
    "css",
    "d",
    "go",
    "haskell",
    "html",
    "java",
    "javascript",
    "json",
    "lua",
    "markdown",
    "python",
    "rust",
    "toml",
    "typescript-tsx",
    "typescript-typescript",
    "yaml",
    "vim",
    "ts-highlight"
]
bash = []
c = []
cpp = []
css = []
d = []
go = []
haskell = []
html = []
java = []
javascript = []
json = []
lua = []
markdown = []
python = []
rust = []
toml = []
typescript-tsx = []
typescript-typescript = []
vim = []
yaml = []

ts-highlight = ["tree-sitter-highlight"]

[dependencies]
tree-sitter = ">= 0.19, < 0.21"
tree-sitter-highlight = { version = ">= 0.19, < 0.21", optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
html-escape = "0.2"
lazy_static = "1"

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
