[package]
name = "rs-tree-sitter-languages"
description = "Collection of Tree-Sitter parsers"
repository = "https://github.com/fastrepl/rs-tree-sitter-languages"
version = "0.0.2"
edition = "2021"
license = "MIT"
build = "build.rs"

include = [
    "**/*.rs",
    "Cargo.toml",
    "sitters/tree-sitter-*/treesitter-language-version",
    "sitters/tree-sitter-*/*.js",
    "sitters/tree-sitter-*/queries/*.scm",
    "sitters/tree-sitter-*/**/*.c",
    "sitters/tree-sitter-*/**/*.h",
    "sitters/tree-sitter-*/**/*.cc",
    "sitters/tree-sitter-*/**/node-types.json",
]

[features]
default = [
    "bash",
    "c",
    "cpp",
    "css",
    "d",
    "go",
    "haskell",
    "html",
    "java",
    "javascript",
    "json",
    "lua",
    "markdown",
    "php",
    "python",
    "rust",
    "toml",
    "typescript-tsx",
    "typescript-typescript",
    "vim",
    "yaml",
    "elixir",
    "erlang",
    "perl",
    "ruby",
]
bash = []
c = []
cpp = []
css = []
d = []
go = []
haskell = []
html = []
java = []
javascript = []
json = []
lua = []
markdown = []
php = []
python = []
rust = []
toml = []
typescript-tsx = []
typescript-typescript = []
yaml = []
vim = []
elixir = []
erlang = []
perl = []
ruby = []

[dependencies]
tree-sitter = "0.22.5"

[build-dependencies]
cc = "1"
